--- a/ui/main_ui.ui
+++ b/ui/main_ui.ui
@@ -51,7 +51,7 @@
       <item>
        <widget class="QGroupBox" name="gbControl">
         <property name="title">
-         <string>gbContol</string>
+         <string>Contol</string>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
